# sample-snapshot-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
analyzer/: main.py
proto/snapshot/v1/: analyzer.proto  analyzer_pb2.py  analyzer_pb2.pyi  analyzer_pb2_grpc.py
tests/: test_main.py
tools/: snapshot_analyzer_client.py  validator.py
