[project]
name = "aipf-sample-snapshot-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio==1.80.0",
    "mypy-protobuf==5.0.0",
    "pillow==12.2.0",
    "pydantic==2.13.1",
]

[dependency-groups]
dev = [
    "grpcio-tools==1.80.0",
    "pytest==9.0.3",
    "ruff==0.15.10",
]

[tool.ruff]
line-length = 110
exclude = ["*_pb2.py", "*_pb2_grpc.py", "*.pyi"]

[tool.ruff.lint]
extend-select = ["I"]
